dist/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: arks-gateway-plugins
  name: arks-gateway-plugins
  namespace: arks-operator-system
spec:
  ports:
  - name: grpc
    port: 50052
    protocol: TCP
    targetPort: grpc
  - name: metrics
    port: 9110
    protocol: TCP
    targetPort: metrics
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: arks-gateway-plugins
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    role: master
    tier: backend
  name: arks-redis-master
  namespace: arks-operator-system
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arks-gateway-plugins
  namespace: arks-operator-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arks-gateway-plugins
  template:
    metadata:
      labels:
        app: arks-gateway-plugins
    spec:
      containers:
      - args:
        - -redis.addrs=arks-redis-master:6379
        image: scitixai/arks-gateway-plugins:v0.1.6
        imagePullPolicy: Always
        name: main
        ports:
        - containerPort: 50052
          name: grpc
        - containerPort: 9110
          name: metrics
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 1
            memory: 1Gi
      serviceAccountName: arks-gateway-plugins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: arks-redis-master
  namespace: arks-operator-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - image: redis:8.2.1
        name: master
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 1
            memory: 1Gi
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: healthcheck
  namespace: arks-operator-system
spec:
  healthCheck:
    passive:
      baseEjectionTime: 30s
      consecutive5XxErrors: 3
      consecutiveGatewayErrors: 3
      consecutiveLocalOriginFailures: 3
      interval: 30s
      maxEjectionPercent: 100
      splitExternalLocalOriginErrors: false
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: arks-eg
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: arks-eg
  namespace: arks-operator-system
spec:
  gatewayClassName: arks-eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: akrs-custom-proxy-config
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: arks-eg
  namespace: arks-operator-system
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arks-gateway-http-router
  namespace: arks-operator-system
spec:
  parentRefs:
  - name: arks-eg
  rules:
  - backendRefs:
    - name: arks-gateway-plugins
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /v1/models
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arks-reserved-router
  namespace: arks-operator-system
spec:
  parentRefs:
  - name: arks-eg
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1/chat/completions
    - path:
        type: PathPrefix
        value: /v1/completions
